--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,6 @@
     android:background="#F3F3FC"
     tools:context=".data.MainActivity">
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -37,15 +34,12 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
             android:id="@+id/innerDiv"
-            android:layout_height="158dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="145dp"
             android:background="@drawable/gradient"
             android:orientation="vertical"
-            android:padding="10dp"
+            android:padding="20dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="20dp"
             tools:layout_editor_absoluteY="60dp">
@@ -69,27 +63,14 @@
                 android:textSize="16dp"
                 app:fontFamily="@font/quicksand" />
 
-            <TextView
-                android:id="@+id/DrugRecall"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_alignParentBottom="true"
-                android:text="@string/ifDrugRecall"
-                android:onClick="infoRecallSwitch"
-                android:textColor="#EEEAEA"
-                android:textAlignment="center"
-                />
-
-
         </LinearLayout>
+
 
 
         <LinearLayout
             android:id="@+id/newsDiv"
             android:layout_width="match_parent"
-            android:layout_height="186dp"
-            android:layout_margin="20dp"
+            android:layout_height="321dp"
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="10dp"
@@ -101,8 +82,6 @@
             <TextView
                 android:id="@+id/foodRecallText"
                 android:layout_width="fill_parent"
-
-
                 android:layout_height="wrap_content"
                 android:text="@string/foodRecallTitle"
                 android:textAlignment="center"
@@ -114,6 +93,7 @@
                 android:id="@+id/news"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
+                android:layout_marginTop="5dp"
                 android:padding="10dp"
                 android:scrollbars="vertical"
                 android:text="@string/news"
@@ -124,18 +104,22 @@
 
         </LinearLayout>
 
+
+
+
         <LinearLayout
-
-            android:id="@+id/bottomDiv"
+            android:id="@+id/secondDiv"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="#D6E0E0"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/cardview_dark_background"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/topDiv">
-
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="20dp"
+            tools:layout_editor_absoluteY="60dp">
             <Button
                 android:id="@+id/editButton"
-                android:layout_width="230dp"
+                android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
@@ -145,14 +129,22 @@
                 android:onClick="myMedsSwitch"
                 android:paddingRight="15dp"
                 android:text="@string/editList"
-
-
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/DrugRecall"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
 
+                android:layout_gravity="bottom"
+                android:onClick="infoRecallSwitch"
+                android:text="@string/ifDrugRecall"
+                android:textAlignment="center"
+                android:textColor="#EEEAEA" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
