--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,9 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:centerX="3%"
-        android:startColor="#FF1B3E96"
-        android:centerColor="#3A4FCA"
-        android:endColor="#1DA5DB"
+        android:centerX="2%"
+        android:startColor="#19277C"
+        android:centerColor="#268FDA"
+        android:endColor="#037FB4"
+
         android:angle="45"/>
 </shape>
