--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,8 +51,8 @@
 
                     <TextView
                         android:id="@+id/alertText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
                         android:text="@string/alerts"
                         android:textColor="@color/white"
                         android:textSize="16dp"
