--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,6 +13,19 @@
     tools:context=".ui.login.LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+
+        android:layout_marginTop="40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/logo_invert" />
+
+
     <EditText
         android:id="@+id/username"
 
@@ -109,7 +122,7 @@
 
 
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="160dp"
         android:gravity="center_horizontal"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
@@ -117,6 +130,8 @@
         android:textSize="60dp"
         app:fontFamily="@font/quicksand"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="160dp" />
+        tools:layout_editor_absoluteX="16dp" />
+
+
 
 </android.support.constraint.ConstraintLayout>
