--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="345dp"
                     android:layout_weight="1"
-                    android:background="@color/cardview_dark_background"
+                    android:background="#272727"
                     android:orientation="vertical"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:layout_editor_absoluteX="20dp"
